// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameList renders with games 1`] = `
Array [
  <ul>
    <li>
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Hosted by 
        Display Name 1
      </a>
    </li>
    <li>
      <a
        onClick={[Function]}
        style={Object {}}
      >
        Hosted by 
        Display Name 2
      </a>
    </li>
  </ul>,
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={undefined}
    type="button"
  >
    New
  </button>,
]
`;

exports[`GameList renders with no games 1`] = `
Array [
  <ul />,
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={undefined}
    type="button"
  >
    New
  </button>,
]
`;

exports[`GameList renders with no user 1`] = `
<button
  className="btn btn-primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Sign In
</button>
`;
